add bootstrap-grid and icons to footer

--- a/src/styles/sass/_footer.sass
+++ b/src/styles/sass/_footer.sass
@@ -1,7 +1,18 @@
 footer
     width: $footer-width
     height: $footer-height
-    background: black
-    color: white
+    background: #fafafa
     position: fixed
     bottom: 0px
+    text-align: center
+    font-size: 1.5em
+    border-top: 1px solid #e5e5e5
+
+    a, a:focus, a:active
+        outline: none
+        text-decoration: none
+
+    .icon-set
+        height: $footer-height
+        line-height: $footer-height
+        color: #555
