--- a/src/styles/sass/_variables.sass
+++ b/src/styles/sass/_variables.sass
@@ -1,4 +1,9 @@
-$header-height: 60px
+$header-height: 50px
 
 $footer-height: 44px
 $footer-width: 100%
+
+$common-background-color: #fafafa
+$common-font-color: #555
+
+$common-icon-size: 1.5em
