use shared variables for footer styles

--- a/src/styles/sass/_footer.sass
+++ b/src/styles/sass/_footer.sass
@@ -1,7 +1,7 @@
 footer
     width: $footer-width
     height: $footer-height
-    background: #fafafa
+    background: $common-background-color
     position: fixed
     bottom: 0px
     text-align: center
@@ -15,4 +15,4 @@ footer
     .icon-set
         height: $footer-height
         line-height: $footer-height
-        color: #555
+        color: $common-font-color
