--- a/src/styles/sass/_footer.sass
+++ b/src/styles/sass/_footer.sass
@@ -7,6 +7,7 @@ footer
     text-align: center
     font-size: 1.5em
     border-top: 1px solid #e5e5e5
+    opacity: 0.9
 
     a, a:focus, a:active
         outline: none
