--- a/src/styles/sass/_variables.sass
+++ b/src/styles/sass/_variables.sass
@@ -6,4 +6,5 @@ $footer-width: 100%
 $common-background-color: #fafafa
 $common-font-color: #555
 
-$common-icon-size: 1.5em
+
+$common-font: 'Open Sans'
