--- a/src/styles/sass/_variables.sass
+++ b/src/styles/sass/_variables.sass
@@ -1,4 +1,4 @@
-$header-height: 50px
+$header-height: 44px
 
 $footer-height: 44px
 $footer-width: 100%
@@ -6,5 +6,6 @@ $footer-width: 100%
 $common-background-color: #fafafa
 $common-font-color: #555
 
+$common-icon-size: 1.5em
 
 $common-font: 'Open Sans'
