--- a/src/styles/sass/_body.sass
+++ b/src/styles/sass/_body.sass
@@ -1,6 +1,17 @@
 .body-holder
     margin-top: $header-height
 
+body
+    .search-overlay
+        width: 100%
+        height: 100%
+        position: fixed
+        top: 0
+        background: none
+        z-index: -1
+        &.mounted
+            z-index: 0
+
 #map-canvas
     width: 100%
     height: 100%
