--- a/src/styles/sass/_variables.sass
+++ b/src/styles/sass/_variables.sass
@@ -7,5 +7,6 @@ $common-background-color: #fafafa
 $common-font-color: #555
 
 $common-icon-size: 1.5em
+$title-font-size: 1.2em
 
 $common-font: 'Open Sans'
