--- a/src/styles/sass/_pages_mytasks.sass
+++ b/src/styles/sass/_pages_mytasks.sass
@@ -1,7 +1,17 @@
 .cards-wrap
-    padding: 1px 8px 0
+    padding: 1px 8px
     overflow: scroll
     height: 100%
+    position: relative
+
+    .card:nth-child(1)
+        margin-top: 10px
+    .card:last-child
+        margin-bottom: 105px
 
     .title
         font-size: 1.5em
+
+.cards-wrap.edge2edge
+    padding: 1px 0
+
