--- a/src/styles/sass/_header.sass
+++ b/src/styles/sass/_header.sass
@@ -7,6 +7,7 @@ header
     border-bottom: 1px solid #e5e5e5
     z-index: 2
     position: relative
+    +box-shadow(#999 1px 1px 3px -1px)
 
 
     .square
