add footer highlight color

--- a/src/styles/sass/_footer.sass
+++ b/src/styles/sass/_footer.sass
@@ -19,9 +19,11 @@ footer
     .nav-desc
         font-size: 1.1em
 
+    a.focused
+        color: #2980B9
     a
         color: $common-font-color
         outline: none
         &:hover
             text-decoration: none
-                
+            color: #2980B9
